- able to start, everything fails